--- a/sass/grid/_layout.scss
+++ b/sass/grid/_layout.scss
@@ -1,95 +1,94 @@
-@mixin grid-init() {
-  @if not global-variable-exists(-GRID-LOADED) {
-    $-GRID-LOADED: true !global;
-
-    #{$grid-row-class} {
-      @extend %#{$grid-row-name};
-    }
-
-
-    #{$grid-col-class} {
-      @extend %#{$grid-col-name};
-    }
-
-
-    #{$grid-col-class} {
-      position: relative;
-    }
-    
-
-    // Grid gutters
-    #{$grid-col-class},
-    #{$grid-row-class} {
-      @extend %media-gutters-half-x;
-    }
-
-    // Grid breakpoints / grid col padding / widths
-    @media #{map-get($grid-breakpoint, m)} {
-      @include grid(map-get($grid-columns, xl),
-                    $multiple: map-get($grid-columns, xl) / map-get($grid-columns, m),
-                    $breakpoint: 'm');
-      @include grid(map-get($grid-columns, m),
-                    $name-ext: 'm',
-                    $breakpoint: 'm');
-    }
-
-
-    @media #{map-get($grid-breakpoint, l)} {
-      @include grid(map-get($grid-columns, xl),
-                    $multiple: map-get($grid-columns, xl) / map-get($grid-columns, l),
-                    $breakpoint: 'l');
-      @include grid(map-get($grid-columns, l),
-                    $name-ext: 'l',
-                    $breakpoint: 'l');
-    }
-
-
-    @media #{map-get($grid-breakpoint, xl)} {
-      @include grid(map-get($grid-columns, xl), $breakpoint: 'xl');
-      @include grid(map-get($grid-columns, xl),
-                    $name-ext: 'xl',
-                    $breakpoint: 'xl');
-    }
-
-
-    @media #{map-get($grid-breakpoint, s)} {
-      @include grid(map-get($grid-columns, xl),
-                    $multiple: map-get($grid-columns, xl) / map-get($grid-columns, s),
-                    $breakpoint: 's');
-      @include grid(map-get($grid-columns, s),
-                    $name-ext: 's',
-                    $breakpoint: 's');
-    }
-
-
-    @media #{map-get($grid-breakpoint, xs)} {
-      @include grid(map-get($grid-columns, xl),
-                    $multiple: map-get($grid-columns, xl) / map-get($grid-columns, xs),
-                    $breakpoint: 'xs');
-      @include grid(map-get($grid-columns, xs),
-                    $name-ext: 'xs',
-                    $breakpoint: 'xs');
-    }
-
-
-    // Hider classes
-    @each $size in map-keys($grid-breakpoint) {
-      .hide--#{$size}, .x0--#{$size} {
-        @extend %hide--#{$size};
-      }
-    }
-
-
-    #{$grid-class}--nopad,
-    #{$grid-row-class}--nopad,
-    #{$grid-col-class}--nopad,
-    #{$grid-row-class}#{$grid-row-class}--nopad,
-    #{$grid-col-class}#{$grid-col-class}--nopad {
-      padding: 0;
-    }
-
-
-    // Flex modifiers
-    @include extend-flex($grid-name, ('', '.col', '.row'));
+@include import-once('grid') {
+  #{$grid-row-class} {
+    @extend %#{$grid-row-name};
   }
+
+
+  #{$grid-col-class} {
+    @extend %#{$grid-col-name};
+  }
+
+
+  #{$grid-col-class} {
+    position: relative;
+  }
+
+
+  // Grid gutters
+  #{$grid-col-class},
+  #{$grid-row-class} {
+    @extend %media-gutters-half-x;
+  }
+
+
+  // Grid breakpoints / grid col padding / widths
+  @media #{map-get($grid-breakpoint, xl)} {
+    @include grid(map-get($grid-columns, xl), $breakpoint: 'xl');
+    @include grid(map-get($grid-columns, xl),
+                  $name-ext: 'xl',
+                  $breakpoint: 'xl');
+  }
+
+
+  @media #{map-get($grid-breakpoint, l)} {
+    @include grid(map-get($grid-columns, xl),
+                  $multiple: map-get($grid-columns, xl) / map-get($grid-columns, l),
+                  $breakpoint: 'l');
+    @include grid(map-get($grid-columns, l),
+                  $name-ext: 'l',
+                  $breakpoint: 'l');
+  }
+
+
+
+  @media #{map-get($grid-breakpoint, m)} {
+    @include grid(map-get($grid-columns, xl),
+                  $multiple: map-get($grid-columns, xl) / map-get($grid-columns, m),
+                  $breakpoint: 'm');
+    @include grid(map-get($grid-columns, m),
+                  $name-ext: 'm',
+                  $breakpoint: 'm');
+  }
+
+
+  @media #{map-get($grid-breakpoint, s)} {
+    @include grid(map-get($grid-columns, xl),
+                  $multiple: map-get($grid-columns, xl) / map-get($grid-columns, s),
+                  $breakpoint: 's');
+    @include grid(map-get($grid-columns, s),
+                  $name-ext: 's',
+                  $breakpoint: 's');
+  }
+
+
+  @media #{map-get($grid-breakpoint, xs)} {
+    @include grid(map-get($grid-columns, xl),
+                  $multiple: map-get($grid-columns, xl) / map-get($grid-columns, xs),
+                  $breakpoint: 'xs');
+    @include grid(map-get($grid-columns, xs),
+                  $name-ext: 'xs',
+                  $breakpoint: 'xs');
+  }
+
+
+  // Hider classes
+  @each $size in map-keys($grid-breakpoint) {
+    .hide--#{$size}, .x0--#{$size} {
+      @extend %hide--#{$size};
+    }
+  }
+
+
+  #{$grid-class}--nopad,
+  #{$grid-row-class}--nopad,
+  #{$grid-col-class}--nopad,
+  #{$grid-row-class}#{$grid-row-class}--nopad,
+  #{$grid-col-class}#{$grid-col-class}--nopad {
+    padding: 0;
+  }
+
+
+  // Flex modifiers
+  @include extend-flex($grid-name, ('', '.col', '.row'));
+
 }
