--- a/sass/spacing/_core.scss
+++ b/sass/spacing/_core.scss
@@ -3,15 +3,14 @@
  **/
 @import '../core';
 
+@import '../flexibility/variables';
+@import '../flexibility/mixins';
+@import '../flexibility/placeholders';
+
 @import '../grid/variables';
 @import '../grid/placeholders';
-@include grid-placeholders-init();
 
 @import 'variables';
 @import 'mixins';
-
 @import 'placeholders';
-@include spacing-placeholders-init();
-
 @import 'layout';
-@include spacing-init();
