--- a/sass/_placeholders.scss
+++ b/sass/_placeholders.scss
@@ -1,177 +1,173 @@
-@mixin placeholders-init() {
-  @if not global-variable-exists(PLACEHOLDERS-LOADED) {
-    $PLACEHOLDERS-LOADED: true !global;
+@include import-once('core-placeholders') {
+  %hardware-accel {
+    @include prefix((transform: translateZ(0),
+                     backface-visibility: hidden,
+                     perspective: 1000),
+                    webkit ms);
+    @include prefix((transform: translate3d(0, 0, 0)), webkit ms);
+  }
 
-    %hardware-accel {
-      @include prefix((transform: translateZ(0),
-                       backface-visibility: hidden,
-                       perspective: 1000),
-                      webkit ms);
-      @include prefix((transform: translate3d(0, 0, 0)), webkit ms);
-    }
+  %browser-reset {
+    background: none;
+    border: 0;
+    margin: 0;
+    outline: 0;
+    padding: 0;
+    word-wrap: break-word;
+  }
 
-    %browser-reset {
-      background: none;
-      border: 0;
-      margin: 0;
-      outline: 0;
-      padding: 0;
-      word-wrap: break-word;
-    }
-
-    %pill {
-      border-radius: $MAX-PX;
-    }
+  %pill {
+    border-radius: $MAX-PX;
+  }
 
 
-    /** Visibility */
-    %visible {
-      visibility: visible;
-      opacity: 1;
-    }
+  /** Visibility */
+  %visible {
+    visibility: visible;
+    opacity: 1;
+  }
 
 
-    %hidden {
-      display: none;
-    }
+  %hidden {
+    display: none;
+  }
 
 
-    /** Positioning */
-    %fixed-top-fw {
-      position: fixed;
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: auto;
-      width: 100%;
-    }
+  /** Positioning */
+  %fixed-top-fw {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: auto;
+    width: 100%;
+  }
 
 
-    %fixed-bottom-fw {
-      position: fixed;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      top: auto;
-      width: 100%;
-    }
+  %fixed-bottom-fw {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: auto;
+    width: 100%;
+  }
 
 
-    %absolute-top {
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: auto;
-    }
+  %absolute-top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: auto;
+  }
 
-    %absolute-bottom {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      top: auto;
-    }
+  %absolute-bottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    top: auto;
+  }
 
-    %absolute-top-fw {
-      @extend %absolute-top;
-      right: 0;
-      width: 100%;
-    }
-
-
-    %absolute-bottom-fw {
-      @extend %absolute-top-fw;
-      @extend %absolute-bottom;
-    }
+  %absolute-top-fw {
+    @extend %absolute-top;
+    right: 0;
+    width: 100%;
+  }
 
 
-    /** Transition effects */
-    $FAST: 0.13s !global;
-    $MED: 0.33s !global;
-    $SLOW: 0.5s !global;
-
-    %fade-in--fast {
-      @include transition(visibility $FAST ease-in, opacity $FAST ease-in);
-    }
+  %absolute-bottom-fw {
+    @extend %absolute-top-fw;
+    @extend %absolute-bottom;
+  }
 
 
-    %fade-out--fast {
-      @include transition(visibility $FAST ease-out, opacity $FAST ease-in);
-    }
+  /** Transition effects */
+  $FAST: 0.13s !global;
+  $MED: 0.33s !global;
+  $SLOW: 0.5s !global;
+
+  %fade-in--fast {
+    @include transition(visibility $FAST ease-in, opacity $FAST ease-in);
+  }
 
 
-    %fade-in {
-      @include transition(visibility $MED ease-in, opacity $MED ease-in);
-    }
+  %fade-out--fast {
+    @include transition(visibility $FAST ease-out, opacity $FAST ease-in);
+  }
 
 
-    %fade-out {
-      @include transition(visibility $MED ease-out, opacity $MED ease-in);
-    }
+  %fade-in {
+    @include transition(visibility $MED ease-in, opacity $MED ease-in);
+  }
 
 
-    %fade-in--slow {
-      @include transition(visibility $SLOW ease-in, opacity $SLOW ease-in);
-    }
+  %fade-out {
+    @include transition(visibility $MED ease-out, opacity $MED ease-in);
+  }
 
 
-    %fade-out--slow {
-      @include transition(visibility $SLOW ease-out, opacity $SLOW ease-in);
-    }
+  %fade-in--slow {
+    @include transition(visibility $SLOW ease-in, opacity $SLOW ease-in);
+  }
 
 
-    %drop-in--fast {
-      @extend %fade-in;
-      @include transition(top $FAST ease-out, visibility $FAST ease-out,
-                          opacity $FAST ease-in);
-    }
+  %fade-out--slow {
+    @include transition(visibility $SLOW ease-out, opacity $SLOW ease-in);
+  }
 
 
-    %drop-in {
-      @extend %fade-in;
-      @include transition(top $MED ease-out, visibility $MED ease-out,
-                          opacity $MED ease-in);
-    }
+  %drop-in--fast {
+    @extend %fade-in;
+    @include transition(top $FAST ease-out, visibility $FAST ease-out,
+                        opacity $FAST ease-in);
+  }
 
 
-    %drop-in--slow {
-      @extend %fade-in;
-      @include transition(top $SLOW ease-out, visibility $SLOW ease-out,
-                          opacity $SLOW ease-in);
-    }
+  %drop-in {
+    @extend %fade-in;
+    @include transition(top $MED ease-out, visibility $MED ease-out,
+                        opacity $MED ease-in);
+  }
 
 
-    %drop-out--fast {
-      @extend %fade-out--fast;
-      @include transition(top $FAST ease-out, visibility $FAST ease-out,
-                          opacity $FAST ease-in);
-    }
+  %drop-in--slow {
+    @extend %fade-in;
+    @include transition(top $SLOW ease-out, visibility $SLOW ease-out,
+                        opacity $SLOW ease-in);
+  }
 
 
-    %drop-out {
-      @extend %fade-out;
-      @include transition(top $MED ease-out, visibility $MED ease-out,
-                          opacity $MED ease-in);
-    }
+  %drop-out--fast {
+    @extend %fade-out--fast;
+    @include transition(top $FAST ease-out, visibility $FAST ease-out,
+                        opacity $FAST ease-in);
+  }
 
 
-    %drop-out--slow {
-      @include transition(visibility $SLOW ease-out, opacity $SLOW ease-in,
-                          top $SLOW ease-out);
-    }
+  %drop-out {
+    @extend %fade-out;
+    @include transition(top $MED ease-out, visibility $MED ease-out,
+                        opacity $MED ease-in);
+  }
 
 
-    %transform--fast {
-      @include transition(transform $FAST ease-out);
-    }
+  %drop-out--slow {
+    @include transition(visibility $SLOW ease-out, opacity $SLOW ease-in,
+                        top $SLOW ease-out);
+  }
 
 
-    %transform {
-      @include transition(transform $MED ease-out);
-    }
+  %transform--fast {
+    @include transition(transform $FAST ease-out);
+  }
 
 
-    %transform--slow {
-      @include transition(transform $SLOW ease-out);
-    }
+  %transform {
+    @include transition(transform $MED ease-out);
+  }
+
+
+  %transform--slow {
+    @include transition(transform $SLOW ease-out);
   }
 }
