--- a/sass/ui/button/_placeholders.scss
+++ b/sass/ui/button/_placeholders.scss
@@ -1,78 +1,74 @@
-@mixin button-placeholders-init() {
-  @if not global-variable-exists(-BUTTON-PLACEHOLDERS-LOADED) {
-    $-BUTTON-PLACEHOLDERS-LOADED: true !global;
+@include import-once('button-placeholders') {
+  %#{$button-name}, %button {
+    @extend %media-margin-gutters-half-y;
+    @extend %#{$flex-name}--y-center;
+    background: $button-background;
+    color: $button-color;
+    border-style: $button-border-style;
+    border-width: $button-border-width;
+    border-color: $button-border-color;
+    border-radius: $button-border-radius;
+    line-height: $button-line-height;
+    outline: 0;
 
-    %#{$button-name}, %button {
-      @extend %media-margin-gutters-half-y;
-      @extend %#{$flex-name}--y-center;
-      background: $button-background;
-      color: $button-color;
-      border-style: $button-border-style;
-      border-width: $button-border-width;
-      border-color: $button-border-color;
-      border-radius: $button-border-radius;
-      line-height: $button-line-height;
-      outline: 0;
-
-      &.hover {
-        @extend %#{$button-name}--hover;
-      }
-
-      &.active {
-        @extend %#{$button-name}--active;
-      }
+    &.hover {
+      @extend %#{$button-name}--hover;
     }
 
-    %#{$button-name}--hover {
-      cursor: pointer;
-      background: $button-hover-background;
-      color: $button-hover-color;
-      border-style: $button-hover-border-style;
-      border-width: $button-hover-border-width;
-      border-color: $button-hover-border-color;
+    &.active {
+      @extend %#{$button-name}--active;
     }
+  }
+
+  %#{$button-name}--hover {
+    cursor: pointer;
+    background: $button-hover-background;
+    color: $button-hover-color;
+    border-style: $button-hover-border-style;
+    border-width: $button-hover-border-width;
+    border-color: $button-hover-border-color;
+  }
 
 
-    %#{$button-name}--active {
-      cursor: pointer;
-      background: $button-active-background;
-      color: $button-active-color;
-      border-style: $button-active-border-style;
-      border-width: $button-active-border-width;
-      border-color: $button-active-border-color;
-    }
+  %#{$button-name}--active {
+    cursor: pointer;
+    background: $button-active-background;
+    color: $button-active-color;
+    border-style: $button-active-border-style;
+    border-width: $button-active-border-width;
+    border-color: $button-active-border-color;
+  }
 
 
-    %#{$button-name}--s {
-      padding: $button-s-padding-top
-               $button-s-padding-right
-               $button-s-padding-bottom
-               $button-s-padding-left;
-      @include font-line($button-s-font-size,
-                         $button-s-font-size,
-                         $weight: $button-s-font-weight);
-    }
+  %#{$button-name}--s {
+    padding: $button-s-padding-top
+             $button-s-padding-right
+             $button-s-padding-bottom
+             $button-s-padding-left;
+    @include font-line($button-s-font-size,
+                       $button-s-font-size,
+                       $weight: $button-s-font-weight);
+  }
 
 
-    %#{$button-name}--m {
-      padding: $button-m-padding-top
-               $button-m-padding-right
-               $button-m-padding-bottom
-               $button-m-padding-left;
-      @include font-line($button-m-font-size,
-                         $button-m-font-size,
-                         $weight: $button-m-font-weight);
-    }
+  %#{$button-name}--m {
+    padding: $button-m-padding-top
+             $button-m-padding-right
+             $button-m-padding-bottom
+             $button-m-padding-left;
+    @include font-line($button-m-font-size,
+                       $button-m-font-size,
+                       $weight: $button-m-font-weight);
+  }
 
 
-    %#{$button-name}--l  {
-      padding: $button-l-padding-top
-               $button-l-padding-right
-               $button-l-padding-bottom
-               $button-l-padding-left;
-      @include font-line($button-l-font-size,
-                         $button-l-font-size,
-                         $weight: $button-l-font-weight);
-    }
+  %#{$button-name}--l  {
+    padding: $button-l-padding-top
+             $button-l-padding-right
+             $button-l-padding-bottom
+             $button-l-padding-left;
+    @include font-line($button-l-font-size,
+                       $button-l-font-size,
+                       $weight: $button-l-font-weight);
   }
 }
