--- a/sass/ui/card/_placeholders.scss
+++ b/sass/ui/card/_placeholders.scss
@@ -1,18 +1,14 @@
-@mixin card-placeholders-init() {
-  @if not global-variable-exists(-CARD-PLACEHOLDERS-LOADED) {
-    $-CARD-PLACEHOLDERS-LOADED: true !global;
-
-    %#{$card-name} {
-      @extend %#{$flex-name};
-      @extend %media-margin-gutters-y;
-      margin-top: 0;
-      background: $card-background;
-      border-width: $card-border-width;
-      border-style: $card-border-style;
-      border-color: $card-border-color;
-      border-radius: $card-border-radius;
-      width: 100%;
-      @include flex-direction(column);
-    }
+@include import-once('card-placeholders') {
+  %#{$card-name} {
+    @extend %#{$flex-name};
+    @extend %media-margin-gutters-y;
+    margin-top: 0;
+    background: $card-background;
+    border-width: $card-border-width;
+    border-style: $card-border-style;
+    border-color: $card-border-color;
+    border-radius: $card-border-radius;
+    width: 100%;
+    @include flex-direction(column);
   }
 }
