--- a/sass/ui/form/toggler/_layout.scss
+++ b/sass/ui/form/toggler/_layout.scss
@@ -1,63 +1,59 @@
-@mixin toggler-init() {
-  @if not global-variable-exists(-TOGGLER-LOADED) {
-    $-TOGGLER-LOADED: true !global;
+@include import-once('toggler') {
+  #{$toggler-class} {
+    @extend #{$checkbox-class};
 
-    #{$toggler-class} {
-      @extend #{$checkbox-class};
-
-      label:hover {
-        cursor: pointer;
-      }
+    label:hover {
+      cursor: pointer;
     }
+  }
 
 
+  #{$toggler-class}__container {
+    @extend %#{$flex-name};
+    @extend %#{$flex-name}--y-center;
+    @extend %#{$flex-name}--x-left;
+    width: 50px;
+    height: 24px;
+    border-radius: $MAX-PX;
+    border-width: 1px;
+    border-style: solid;
+    border-color: $light-border;
+    background: $light-grey;
+    padding: 2px;
+    @include transition(background $FAST ease-in);
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+
+  #{$toggler-class}.enabled  {
     #{$toggler-class}__container {
-      @extend %#{$flex-name};
-      @extend %#{$flex-name}--y-center;
-      @extend %#{$flex-name}--x-left;
-      width: 50px;
-      height: 24px;
-      border-radius: $MAX-PX;
-      border-width: 1px;
-      border-style: solid;
-      border-color: $light-border;
-      background: $light-grey;
-      padding: 2px;
-      @include transition(background $FAST ease-in);
-
-      &:hover {
-        cursor: pointer;
-      }
+      @extend %#{$flex-name}--x-right;
+      border-color: $blue;
+      background: $blue;
     }
+  }
 
 
-    #{$toggler-class}.enabled  {
-      #{$toggler-class}__container {
-        @extend %#{$flex-name}--x-right;
-        border-color: $blue;
-        background: $blue;
-      }
-    }
+  #{$toggler-class}__handle {
+    @extend %#{$flex-name};
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+    background: $white;
+    border-color: $dark-border;
+    border-width: 1px;
+    border-style: solid;
+    @include transition(background $FAST ease-in);
+  }
 
-
+  #{$toggler-class}.enabled {
     #{$toggler-class}__handle {
-      @extend %#{$flex-name};
-      border-radius: 100%;
-      width: 20px;
-      height: 20px;
+      margin-left: auto;
       background: $white;
-      border-color: $dark-border;
-      border-width: 1px;
-      border-style: solid;
-      @include transition(background $FAST ease-in);
-    }
-
-    #{$toggler-class}.enabled {
-      #{$toggler-class}__handle {
-        margin-left: auto;
-        background: $white;
-        border-color: $blue;
-      }
+      border-color: $blue;
     }
   }
 }
